# search-engine-c

./: .gitignore  CMakeLists.txt  README.md
src/: corpus.c  corpus.h  main  makefile  objects.c  objects.h  query.c  query.h  search.c  test.c  types.c  types.h
src/arraylist/: arraylist.c  arraylist.h
src/dictionary/: dictionary.c  dictionary.h
src/hashmap/: hashmap.c  hashmap.h
src/hashtable/: hashtable.c  hashtable.h
src/postings/: postings.c  postings.h
src/trie/: trie.c  trie.h
